Apt 1866 - APT-1855 : claim buttons & fix letter spacing APT-1868: splash screen was cropped (#118)
* Primary secondary buttons in claim

* Primary secondary buttons in claim pane

* Row to column buttons

* Primary and secondary gray buttons same effects

* APT-1855 no letter spacing in buttons

* APT-1868 fix cropped splash screen

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,7 +66,7 @@ button,
   }
 
   .btn-primary-teal {
-    @apply bold16 py-1 lg:py-1.5 4k:py-2 px-10 4k:px-12 rounded-160 !bg-tealDark border-aqua1 !text-white leading-6 tracking-widest !h-auto cursor-pointer duration-500 ease-in-out;
+    @apply bold16 py-1 lg:py-1.5 4k:py-2 px-10 4k:px-12 rounded-160 !bg-tealDark border-aqua1 !text-white leading-6 !h-auto cursor-pointer duration-500 ease-in-out;
 
     &:hover:not(:disabled) {
       @apply !bg-tealDark !border-transparent shadow-[0px_0px_8.2px_1.5px_#00FFF3];
@@ -93,7 +93,7 @@ button,
     }
 
     &:disabled {
-      @apply !bg-gray10/[20%] border-gray10 !text-gray11 cursor-not-allowed;
+      @apply !bg-black4 border-gray4 !text-gray8 cursor-not-allowed;
     }
   }
 
@@ -112,11 +112,7 @@ button,
   }
 
   .btn-secondary-grey {
-    @apply flex w-full py-1 lg:py-1.5 4k:py-2 px-1.5 lg:px-2 4k:px-3 rounded-full border-[0.35px] border-white text-white items-center bold16 bg-gray12 cursor-pointer duration-700 ease-in-out;
-
-    &:hover:not(:disabled) {
-      @apply !bg-transparent !text-white !border-white;
-    }
+    @apply btn-primary-grey bg-gray12;
 
     &:disabled {
       @apply !bg-gray10/[20%] border-gray10 !text-gray11 cursor-not-allowed;
@@ -132,7 +128,7 @@ button,
   }
 
   .btn-secondary-teal {
-    @apply !gap-0 !whitespace-normal py-1 lg:py-1.5 4k:py-2 px-5 4k:px-8 w-full font-bold text-13 4k:text-17 leading-6 tracking-widest !h-auto uppercase cursor-pointer duration-500 ease-in-out rounded-full text-aqua1 border-[1px] border-transparent bg-tealDark;
+    @apply !gap-0 !whitespace-normal py-1 lg:py-1.5 4k:py-2 px-5 4k:px-8 w-full font-bold text-13 4k:text-17 leading-6 !h-auto uppercase cursor-pointer duration-500 ease-in-out rounded-full text-aqua1 border-[1px] border-transparent bg-tealDark;
 
     &:hover:not(:disabled) {
       @apply !text-aqua1 !shadow-[0px_0px_10.8px_0px_#00FFF3] !bg-tealDark;
@@ -158,7 +154,7 @@ button,
   }
 
   .btn-small-purple {
-    @apply p-2 lg:p-1.5 4k:p-2 w-fit font-bold text-10 leading-[1.2] tracking-widest !h-auto uppercase cursor-pointer duration-500 ease-in-out rounded-full text-aqua1 border-[1px] border-transparent bg-tealDark;
+    @apply p-2 lg:p-1.5 4k:p-2 w-fit font-bold text-10 leading-[1.2] !h-auto uppercase cursor-pointer duration-500 ease-in-out rounded-full text-aqua1 border-[1px] border-transparent bg-tealDark;
 
     &:hover:not(:disabled) {
       @apply !text-aqua1 !shadow-[0px_0px_10.8px_0px_#00FFF3] !bg-tealDark;
@@ -718,4 +714,12 @@ button,
 .ant-notification-notice-with-icon .ant-notification-notice-description {
   margin-left: 0 !important;
   padding-left: 0 !important;
+}
+
+@supports (-webkit-touch-callout: none) {
+  @media (max-width: 450px) {
+    .fix-mobile-height {
+      height: -webkit-fill-available;
+    }
+  }
 }
